Correct border of blog post editor's note in dark mode

--- a/www/css/blog.css
+++ b/www/css/blog.css
@@ -1,5 +1,5 @@
 .editors-note{
-	border: 3px double #222222;
+	border: 3px double var(--body-text);
 	padding: 2em;
 	font-style: italic;
 	box-sizing: border-box;
